--- a/extensions/bundle-builder/assets/bundle-widget.css
+++ b/extensions/bundle-builder/assets/bundle-widget.css
@@ -2463,8 +2463,8 @@
 }
 
 .bundle-loading-overlay__gif {
-  max-width: 120px;
-  max-height: 120px;
+  max-width: 150px;
+  max-height: 150px;
   width: auto;
   height: auto;
   display: block;
